src/test/resources/infrastructure.yml
apiVersion: v1
kind: Service
metadata:
  name: proxy-test-kc-service
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 80
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 443
  selector:
    app: proxy-test-keycloak
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: proxy-test-kc-http-ingress
spec:
  defaultBackend:
    service:
      name: proxy-test-kc-service
      port:
        number: 80
---
# TODO: check better
# https://kubernetes.io/docs/concepts/services-networking/ingress/#tls
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: proxy-test-kc-https-ingress
spec:
  defaultBackend:
    service:
      name: proxy-test-kc-service
      port:
        number: 443
